# Smart-Wallet

./: .gitignore  README.md
.github/workflows/: deploy.yml  smart-wallet-ai-deploy.yml
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: db.ts  index.ts
db/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
db/prisma/: schema.prisma
db/prisma/smartwallet/: schema.prisma
db/prisma/telbot/: schema.prisma
db/src/: index.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  env.d.ts  index.css  walletInteractions.ts
frontend/src/components/: AIAssistant.tsx  ApproveDappForm.tsx  BalanceLoader.tsx  LandingPage.tsx  Loader.tsx  LoadingButton.tsx  Notification.tsx  NotificationManager.tsx  SmartWalletInteractions.tsx  TelegramBotDemo.tsx  TelegramLoginButton.tsx  TokenSelectModal.tsx  WalletBalanceManager.tsx
frontend/src/services/: AgentWebSocket.ts
frontend/src/store/: chatSlice.ts  connectionSlice.ts  notificationSlice.ts  smartWalletSlice.ts  store.ts  telegramSlice.ts  tokenMetadataSlice.ts  walletSlice.ts
frontend/src/utils/: ConnectionManager.ts  (+1 more)
smart-contract/: Cargo.toml
smart-contract/src/: instruction.rs  lib.rs  processor.rs  state.rs
smart-wallet-ai/: package-lock.json  package.json
smart-wallet-ai/src/: websocketServer.ts
smartWalletTelBot/: package-lock.json  package.json  tsconfig.json
smartWalletTelBot/src/: db.ts  index.ts  server.ts  walletInteractions.ts
test-contract/: Cargo.toml
test-contract/src/: demo.rs
(+17 files in other folders)
