[package]
name = "smart-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "=1.18.23"
spl-token = "=4.0.0"
spl-associated-token-account = { version = "=2.3.0", features = ["no-entrypoint"] }
borsh = "1.5.0"
borsh-derive = "1.5.0"
spl-token-2022 = { version = "0.9", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"] 